AD-1227 fix spacing between rows

--- a/assets/css/less/ascribe.less
+++ b/assets/css/less/ascribe.less
@@ -1340,7 +1340,7 @@ header + .chevron-divider {
 	.short-description {
 		.ttl-columns.column-3;
 		.copyText;
-		margin-bottom: 100px;
+		margin-bottom: 40px;
 
 		h1 {
 			font-size: 22px;
